[Responsive] Fixed the CSS on tablet screens

--- a/app/components/directives/PassionQuiz/PassionQuiz.less
+++ b/app/components/directives/PassionQuiz/PassionQuiz.less
@@ -7,8 +7,11 @@
   padding: 15px 25px;
   min-height: 385px;
 
-  @media (max-width: @screen-phone) {
+  @media (max-width: @screen-tablet) {
     padding: 15px 0;
+  }
+  @media (max-width: @screen-desktop) {
+    padding: 15px;
   }
 }
 
@@ -20,7 +23,7 @@
 .PassionQuiz-description {
   padding: 25px 0 25px 50px;
 
-  @media (max-width: @screen-phone) {
+  @media (max-width: @screen-desktop) {
     padding: 15px 0;
   }
 }
@@ -28,8 +31,8 @@
 .PassionQuiz-startButton {
   padding-left: 50px;
 
-  @media (max-width: @screen-phone) {
-    padding: 15px 0;
+  @media (max-width: @screen-desktop) {
+    padding: 15px;
     text-align: center;
   }
 }
@@ -45,7 +48,7 @@
   display: flex;
   justify-content: space-between;
 
-  @media (max-width: @screen-phone) {
+  @media (max-width: @screen-desktop) {
     margin-left: 0;
   }
 }
